worked on hero section

--- a/index.html
+++ b/index.html
@@ -10,10 +10,18 @@
       integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN"
       crossorigin="anonymous"
     />
-    <title>Portfolio 2024</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;500;600;700&display=swap"
+      rel="stylesheet"
+    />
+    <title>Portfolio 2024 Johanna Ortiz</title>
   </head>
   <body>
-    <nav class="d-flex navbar navbar-expand-lg justify-content-between">
+    <nav
+      class="d-flex navbar navbar-expand-lg justify-content-between fixed-top"
+    >
       <div class="container-fluid">
         <a class="navbar-brand ms-3" href="#">Johanna Ortiz</a>
         <button
@@ -51,7 +59,41 @@
         </div>
       </div>
     </nav>
+    <div class="spacing"></div>
+    <header>
+      <h1 class="aboutme">
+        Hello,
+        <div>I am Johanna.</div>
+      </h1>
+      <h2>- Front End Developer and DEI Passionate -</h2>
 
-    <header></header>
+      <div class="row">
+        <div class="col">
+          <p class="firstcol-hero">
+            Passionate about <b>Diversity, Equity, and Inclusion</b> (DEI), I am
+            a certified Front-end developer with a keen eye for creating
+            <b>innovative, inclusive and user-friendly</b> interfaces.
+          </p>
+        </div>
+        <div class="col">
+          <p>
+            Thriving in <b>diverse and international</b> environments, I am
+            fluent in English, French, and Spanish and am eager to foster
+            <b>communication and collaboration</b> across diversity.
+          </p>
+        </div>
+      </div>
+    </header>
+
+    <section>
+      <h1>My work</h1>
+    </section>
+    <section>
+      <h1>Resume</h1>
+    </section>
+    <footer>
+      <h1>Contact Me</h1>
+      Add the icons of social media and their links
+    </footer>
   </body>
 </html>
