Imported Fontawesome for icons

--- a/index.html
+++ b/index.html
@@ -16,6 +16,10 @@
       href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;500;600;700&display=swap"
       rel="stylesheet"
     />
+    <script
+      src="https://kit.fontawesome.com/44b8818d29.js"
+      crossorigin="anonymous"
+    ></script>
     <title>Portfolio 2024 Johanna Ortiz</title>
   </head>
   <body>
@@ -63,9 +67,11 @@
     <header>
       <h1 class="aboutme">
         Hello,
-        <div>I am Johanna.</div>
+        <div>
+          I am <span class="johanna">Johanna</span>.
+          <h2>- Front End Developer and DEI Passionate -</h2>
+        </div>
       </h1>
-      <h2>- Front End Developer and DEI Passionate -</h2>
 
       <div class="row">
         <div class="col">
