--- a/index.html
+++ b/index.html
@@ -20,20 +20,27 @@
       src="https://kit.fontawesome.com/44b8818d29.js"
       crossorigin="anonymous"
     ></script>
+    <script
+      defer
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js"
+      integrity="sha384-BBtl+eGJRgqQAUMxJ7pMwbEyER4l1g+O15P+16Ep7Q9Q+zqX6gSbd85u4mG4QzX+"
+      crossorigin="anonymous"
+    ></script>
     <title>Portfolio 2024 Johanna Ortiz</title>
   </head>
   <body>
     <nav
       class="d-flex navbar navbar-expand-lg justify-content-between fixed-top"
+      role="navigation"
     >
       <div class="container-fluid">
-        <a class="navbar-brand ms-3" href="#">Johanna Ortiz</a>
+        <a class="navbar-brand ms-3" href="index.html">Johanna Ortiz</a>
         <button
           class="navbar-toggler"
           type="button"
           data-bs-toggle="collapse"
-          data-bs-target="#navbarSupportedContent"
-          aria-controls="navbarSupportedContent"
+          data-bs-target="#navbarNavAltMarkup"
+          aria-controls="navbarNavAltMarkup"
           aria-expanded="false"
           aria-label="Toggle navigation"
         >
@@ -41,11 +48,11 @@
         </button>
         <div
           class="collapse navbar-collapse justify-content-end"
-          id="navbarSupportedContent"
+          id="navbarNavAltMarkup"
         >
           <ul class="navbar-nav ms-auto mb-2 mb-lg-0 me-5">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="#">Home</a>
+              <a class="nav-link active" aria-current="page" href="">Home</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="#">About</a>
@@ -73,7 +80,7 @@
         </div>
       </h1>
 
-      <div class="row">
+      <div class="row hero-row">
         <div class="col">
           <p class="firstcol-hero">
             Passionate about <b>Diversity, Equity, and Inclusion</b> (DEI), I am
@@ -99,7 +106,18 @@
     </section>
     <footer>
       <h1>Contact Me</h1>
-      Add the icons of social media and their links
+      <div class="social-icons">
+        <div class="icons">
+          <div><i class="fa-brands fa-github"></i></div>
+          <a href="https://github.com/Joha-coding" target="_blank">GitHub</a>
+        </div>
+        <div class="email">
+          <div><i class="fa-regular fa-envelope"></i></div>
+          <a href="mailto:johanna.ortiz.work@gmail.com" target="_blank"
+            >johanna.ortiz.work@gmail.com</a
+          >
+        </div>
+      </div>
     </footer>
   </body>
 </html>
