--- a/index.html
+++ b/index.html
@@ -3,6 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="description"
+      content="My name is Johanna and I am a trained Front-end Developer based in Barcelona, also passionate about Diversity Equity and Inclusion (DEI). This website is my portfolio."
+    />
     <link rel="stylesheet" href="style.css" />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
@@ -76,28 +80,26 @@
         Hello,
         <div>
           I am <span class="johanna">Johanna</span>.
-          <h2>- Front End Developer and DEI Passionate -</h2>
+          <h2>Front End Developer and DEI Passionate</h2>
         </div>
       </h1>
-
-      <div class="row hero-row">
-        <div class="col">
-          <p class="firstcol-hero">
-            Passionate about <b>Diversity, Equity, and Inclusion</b> (DEI), I am
-            a certified Front-end developer with a keen eye for creating
-            <b>innovative, inclusive and user-friendly</b> interfaces.
-          </p>
-        </div>
-        <div class="col">
-          <p>
-            Thriving in <b>diverse and international</b> environments, I am
-            fluent in English, French, and Spanish and am eager to foster
-            <b>communication and collaboration</b> across diversity.
-          </p>
-        </div>
-      </div>
     </header>
+    <section class="aboutme-section">
+      <h1>About Me</h1>
 
+      <div class="hero-row">
+        <p class="firstcol-hero">
+          Passionate about <b>Diversity, Equity, and Inclusion</b> (DEI), I am a
+          certified Front-end developer with a keen eye for creating
+          <b>innovative, inclusive and user-friendly</b> interfaces.
+        </p>
+        <p>
+          Thriving in <b>diverse and international</b> environments, I am fluent
+          in English, French, and Spanish and am eager to foster
+          <b>communication and collaboration</b> across diversity.
+        </p>
+      </div>
+    </section>
     <section>
       <h1>My work</h1>
     </section>
