--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
       name="description"
       content="My name is Johanna and I am a trained Front-end Developer based in Barcelona, also passionate about Diversity Equity and Inclusion (DEI). This website is my portfolio."
     />
-    <link rel="stylesheet" href="style.css" />
+
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -20,6 +20,7 @@
       href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;500;600;700&display=swap"
       rel="stylesheet"
     />
+    <link rel="stylesheet" href="style.css" />
     <script
       src="https://kit.fontawesome.com/44b8818d29.js"
       crossorigin="anonymous"
@@ -30,8 +31,14 @@
       integrity="sha384-BBtl+eGJRgqQAUMxJ7pMwbEyER4l1g+O15P+16Ep7Q9Q+zqX6gSbd85u4mG4QzX+"
       crossorigin="anonymous"
     ></script>
-    <title>Portfolio 2024 Johanna Ortiz</title>
+    <title>Johanna Ortiz - Front-End Developer Portfolio</title>
+    <link
+      rel="shortcut icon"
+      type="image/jpg"
+      href="images/Garlic_Branding.png"
+    />
   </head>
+
   <body>
     <nav
       class="d-flex navbar navbar-expand-lg justify-content-between fixed-top"
@@ -74,31 +81,34 @@
         </div>
       </div>
     </nav>
-    <div class="spacing"></div>
-    <header>
-      <h1 class="aboutme">
-        Hello,
-        <div>
-          I am <span class="johanna">Johanna</span>.
-          <h2>Front End Developer and DEI Passionate</h2>
-        </div>
-      </h1>
-    </header>
-    <section class="aboutme-section">
-      <h1>About Me</h1>
 
-      <div class="hero-row">
-        <p class="firstcol-hero">
-          Passionate about <b>Diversity, Equity, and Inclusion</b> (DEI), I am a
-          certified Front-end developer with a keen eye for creating
-          <b>innovative, inclusive and user-friendly</b> interfaces.
-        </p>
-        <p>
-          Thriving in <b>diverse and international</b> environments, I am fluent
-          in English, French, and Spanish and am eager to foster
-          <b>communication and collaboration</b> across diversity.
-        </p>
+    <header>
+      <div class="hero">
+        <h1>
+          Hello,
+          <div>
+            I am Johanna.
+            <h2>Front End Developer and DEI Passionate</h2>
+            <div class="hero-row">
+              <p class="firstcol-hero">
+                Passionate about <b>Diversity, Equity, and Inclusion</b> (DEI),
+                I am a certified Front-end developer with a keen eye for
+                creating
+                <b>innovative, inclusive and user-friendly</b> interfaces.
+              </p>
+              <p>
+                Thriving in <b>diverse and international</b> environments, I am
+                fluent in English, French, and Spanish and am eager to foster
+                <b>communication and collaboration</b> across diversity.
+              </p>
+            </div>
+          </div>
+        </h1>
       </div>
+    </header>
+
+    <section>
+      <h1>About Me</h1>
     </section>
     <section>
       <h1>My work</h1>
@@ -106,6 +116,7 @@
     <section>
       <h1>Resume</h1>
     </section>
+
     <footer>
       <h1>Contact Me</h1>
       <div class="social-icons">
