updates on navbar and hero background

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
           aria-expanded="false"
           aria-label="Toggle navigation"
         >
-          <span class="navbar-toggler-icon"></span>
+          <span><i class="fa-solid fa-bars icon-toggle"></i></span>
         </button>
         <div
           class="collapse navbar-collapse justify-content-end"
