added logo to navbar

--- a/index.html
+++ b/index.html
@@ -45,7 +45,9 @@
       role="navigation"
     >
       <div class="container-fluid">
-        <a class="navbar-brand ms-3" href="index.html">Johanna Ortiz</a>
+        <a class="navbar-brand ms-3" href="index.html"
+          ><img src="images/jo.png" alt="Personal logo"
+        /></a>
         <button
           class="navbar-toggler"
           type="button"
