--- a/index.html
+++ b/index.html
@@ -109,18 +109,18 @@
       </div>
     </header>
 
-    <section>
-      <h1>About Me</h1>
+    <section class="aboutme-section">
+      <h2>About Me</h2>
     </section>
     <section>
-      <h1>My work</h1>
+      <h2>My work</h2>
     </section>
     <section>
-      <h1>Resume</h1>
+      <h2>Resume</h2>
     </section>
 
     <footer>
-      <h1>Contact Me</h1>
+      <h2>Contact Me</h2>
       <div class="social-icons">
         <div class="icons">
           <div><i class="fa-brands fa-github"></i></div>
