--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
       href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;500;600;700&display=swap"
       rel="stylesheet"
     />
+   
     <link rel="stylesheet" href="style.css" />
     <script
       src="https://kit.fontawesome.com/44b8818d29.js"
@@ -89,7 +90,7 @@
         <h1>
           Hello,
           <div>
-            I am Johanna.
+            I am Johanna.</h1>
             <h2>Front End Developer and DEI Passionate</h2>
             <div class="hero-row">
               <p class="firstcol-hero">
@@ -104,13 +105,48 @@
                 <b>communication and collaboration</b> across diversity.
               </p>
             </div>
+            <button><a href="mailto:johanna.ortiz.work@gmail.com" target="_blank">Contact Me</a></button>
           </div>
-        </h1>
+        
       </div>
     </header>
 
     <section class="aboutme-section">
       <h2>About Me</h2>
+
+      <div class="skills">
+        <div>
+      Skills and Technologies :
+      <p>
+        HTML
+CSS
+JavaScript
+ VSCode
+ API
+GitHub 
+Hosting
+AI Integration
+Bootstrap 
+Flexbox
+SEO
+12. Responsive
+13. React.js</p>
+</div>
+       <div>
+       <p> DESIGN TOOLS:
+
+-   Figma
+-   Canva
+- Procreate</p>
+</div>
+
+<div>
+Languages I speak :
+- French 
+- English 
+- Spanish
+</div>
+      </div>
     </section>
     <section>
       <h2>My work</h2>
