integration of about and resume sections

--- a/index.html
+++ b/index.html
@@ -66,26 +66,26 @@
         >
           <ul class="navbar-nav ms-auto mb-2 mb-lg-0 me-5">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="">Home</a>
+              <a class="nav-link active" aria-current="page" href="/#home">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">About</a>
+              <a class="nav-link" href="/#about">About</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">My Work</a>
+              <a class="nav-link" href="/#work">My Work</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Resume</a>
+              <a class="nav-link" href="/#resume">Resume</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Contact</a>
+              <a class="nav-link" href="/#contact">Contact</a>
             </li>
           </ul>
         </div>
       </div>
     </nav>
 
-    <header>
+    <header id="home">
       <div class="hero">
         <h1>
           Hello,
@@ -111,51 +111,58 @@
       </div>
     </header>
 
-    <section class="aboutme-section">
+    <section class="aboutme-section" id="about">
       <h2>About Me</h2>
 
       <div class="skills">
-        <div>
-      Skills and Technologies :
-      <p>
-        HTML
-CSS
-JavaScript
- VSCode
- API
-GitHub 
-Hosting
-AI Integration
-Bootstrap 
-Flexbox
-SEO
-12. Responsive
-13. React.js</p>
-</div>
-       <div>
-       <p> DESIGN TOOLS:
 
--   Figma
--   Canva
-- Procreate</p>
+
+      <div class="column">
+      <h5>Skills and Technologies</h3>
+      <ul>
+        <li>HTML</li>
+        <li>CSS</li>
+        <li>Javascript</li>
+         <li>React.js</li>
+        <li>API Integration</li>
+        <li>GitHub</li>
+        <li>Hosting</li>
+        <li>Artificial Intelligence</li>
+        <li>Bootstrap</li>
+        <li>Flexbox</li>
+        <li>SEO</li>
+        <li>Responsive</li>
+         <li>VS Code</li>
+
+      </ul>
 </div>
 
-<div>
-Languages I speak :
-- French 
-- English 
-- Spanish
+<div class="column">
+     <h5>Design Tools</h5>
+       <ul>
+        <li>Figma</li>
+        <li>Canva</li>
+        <li>Procreate</li>
+       </ul>
+<h5>Languages</h5>
+<ul>
+    <li>French - native</li>
+    <li>English - Full professional proficiency</li>
+    <li>Spanish - Full professional proficiency</li>
+</ul>
 </div>
       </div>
     </section>
-    <section>
+    <section id="work">
       <h2>My work</h2>
     </section>
-    <section>
+
+    <section class="resume">
       <h2>Resume</h2>
+      <img src="/CV EN 2024.png" alt="Curriculum">
     </section>
 
-    <footer>
+    <footer id="contact">
       <h2>Contact Me</h2>
       <div class="social-icons">
         <div class="icons">
