worked on contact me section

--- a/index.html
+++ b/index.html
@@ -158,22 +158,27 @@
     </section>
 
     <section class="resume">
-      <h2>Resume</h2>
+      <h2>Resume - <div><a href="/CV EN 2024.pdf" target="_blank"> Download here <i class="fa-solid fa-download"> </i></a></div></h2>
       <img src="/CV EN 2024.png" alt="Curriculum">
     </section>
 
     <footer id="contact">
       <h2>Contact Me</h2>
       <div class="social-icons">
-        <div class="icons">
-          <div><i class="fa-brands fa-github"></i></div>
-          <a href="https://github.com/Joha-coding" target="_blank">GitHub</a>
+        
+          <div class="github"><i class="fa-brands fa-github"></i>
+          <div><a href="https://github.com/Joha-coding" target="_blank">GitHub</a></div>
         </div>
+       
         <div class="email">
           <div><i class="fa-regular fa-envelope"></i></div>
           <a href="mailto:johanna.ortiz.work@gmail.com" target="_blank"
-            >johanna.ortiz.work@gmail.com</a
+            >Email</a
           >
+        </div>
+        <div class="linkedin">
+            <div><i class="fa-brands fa-linkedin"></i></div>
+          <a href="https://github.com/Joha-coding" target="_blank">Linkedin</a></div>
         </div>
       </div>
     </footer>
