styles and id updates

--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
       <h2>My work</h2>
     </section>
 
-    <section class="resume">
+    <section class="resume" id="resume">
       <h2>Resume - <div><a href="/CV EN 2024.pdf" target="_blank"> Download here <i class="fa-solid fa-download"> </i></a></div></h2>
       <img src="/CV EN 2024.png" alt="Curriculum">
     </section>
