--- a/index.html
+++ b/index.html
@@ -119,7 +119,8 @@
 
       <div class="column">
       <h5>Skills and Technologies</h3>
-      <ul>
+      <div class="scroller">
+        <ul class="tag-list scroller_inner">
         <li>HTML</li>
         <li>CSS</li>
         <li>Javascript</li>
@@ -133,7 +134,7 @@
         <li>SEO</li>
         <li>Responsive</li>
          <li>VS Code</li>
-
+</div>
       </ul>
 </div>
 
@@ -153,7 +154,7 @@
 </div>
       </div>
     </section>
-    <section id="work">
+    <section class="work" id="work">
       <h2>My work</h2>
     </section>
 
@@ -177,8 +178,9 @@
           >
         </div>
         <div class="linkedin">
-            <div><i class="fa-brands fa-linkedin"></i></div>
-          <a href="https://github.com/Joha-coding" target="_blank">Linkedin</a></div>
+           <div> <i class="fa-brands fa-linkedin"></i></div>
+          <a href="https://www.linkedin.com/in/johanna-victoria-ortiz/" target="_blank">Linkedin</a>
+        </div>
         </div>
       </div>
     </footer>
