updated styling for mobile responsiveness

--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
         </ul>
 </div>
       
-      <div class="scroller">
+      <div class=" three-columns">
         <ul class="tag-list scroller-inner">
         <li>Artificial Intelligence</li>
         <li>Bootstrap</li>
