Work and projects section, worked on the responsiveness on mobile device

--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
 
       
       <h5>Skills and Technologies</h3>
-      <div class="scroller" data-speed="fast">
+      <div class="scroller" >
         <ul class="tag-list scroller-inner">
         <li>HTML</li>
         <li>CSS</li>
@@ -130,7 +130,7 @@
         </ul>
 </div>
       
-      <div class=" three-columns">
+      <div class="three-columns scroller">
         <ul class="tag-list scroller-inner">
         <li>Artificial Intelligence</li>
         <li>Bootstrap</li>
@@ -163,6 +163,60 @@
     </section>
     <section class="work" id="work">
       <h2>My work</h2>
+  <div class="projects">
+    <div class="project">
+    <p>
+        <a href="https://github.com/Joha-coding/react-weather-app" target="_blank"><i class="fa-brands fa-github"></i></a>
+       <a href="https://react-weather-joha-coding.netlify.app/" target="_blank"> <i class="fa-solid fa-link"></i></a>
+    </p>
+    <h5>React Weather App</h5>
+<h6>React, Weather API</h6>
+</div>
+
+<div class="project">
+    <p>
+        <a href="https://github.com/Joha-coding/Recipe-generator" target="_blank"><i class="fa-brands fa-github"></i></a>
+        <a href="https://what-can-i-cook.netlify.app/" target="_blank"><i class="fa-solid fa-link"></i></a>
+    </p>
+    <h5>AI-powered Recipe generator</h5>
+<h6>AI API, JavaScript </h6>
+</div>
+
+<div class="project">
+    <p>
+        <a href="https://github.com/Joha-coding/Dictionary-React-Project" target="_blank"><i class="fa-brands fa-github"></i></a>
+        <a href="https://dictionnary-app-joha-coding.netlify.app/" target="_blank"><i class="fa-solid fa-link"></i></a>
+    </p>
+    <h5>Dictionary App</h5>
+<h6>React, Dictionary API</h6>
+</div>
+
+<div class="project">
+    <p>
+        <a href="https://github.com/Joha-coding/parallax-animation" target="_blank"><i class="fa-brands fa-github"></i></a>
+        <a href="https://parallax-web-joha-coding.netlify.app/" target="_blank"><i class="fa-solid fa-link"></i></a>
+    </p>
+    <h5>Parallax animation</h5>
+<h6>Javascript, procreate</h6>
+</div>
+
+<div class="project">
+    <p>
+        <a href="https://github.com/Joha-coding/New-York-Project" target="_blank"><i class="fa-brands fa-github"></i></a>
+        <a href="https://nyc-project-joha-coding.netlify.app/" target="_blank"><i class="fa-solid fa-link"></i></a>
+    </p>
+    <h5>New York Project</h5>
+<h6>Instagram/Maps embeds </h6>
+</div>
+
+<div class="project">
+    <p>
+        <a href="https://github.com/Joha-coding/My-weather-app" target="_blank"><i class="fa-brands fa-github"></i></a>
+        <a href="https://weather-app-joha-coding.netlify.app/" target="_blank"><i class="fa-solid fa-link"></i></a>
+    </p>
+    <h5>JS Weather App</h5>
+<h6>JavaScript, Weather API </h6>
+</div>
   
     </section>
 
