testing responsiveness of about and work sections

--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
         <a href="https://github.com/Joha-coding/Recipe-generator" target="_blank"><i class="fa-brands fa-github"></i></a>
         <a href="https://what-can-i-cook.netlify.app/" target="_blank"><i class="fa-solid fa-link"></i></a>
     </p>
-    <h5>AI-powered Recipe generator</h5>
+    <h5>AI Recipe generator</h5>
 <h6>AI API, JavaScript </h6>
 </div>
 
