updates on "work" section

--- a/index.html
+++ b/index.html
@@ -161,6 +161,8 @@
 </div>
       
     </section>
+
+    
     <section class="work" id="work">
       <h2>My work</h2>
   <div class="projects">
@@ -217,7 +219,7 @@
     <h5>JS Weather App</h5>
 <h6>JavaScript, Weather API </h6>
 </div>
-  
+  </div>
     </section>
 
     <section class="resume" id="resume">
