--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
       integrity="sha384-BBtl+eGJRgqQAUMxJ7pMwbEyER4l1g+O15P+16Ep7Q9Q+zqX6gSbd85u4mG4QzX+"
       crossorigin="anonymous"
     ></script>
+    <script src="index.js"></script>
     <title>Johanna Ortiz - Front-End Developer Portfolio</title>
     <link
       rel="shortcut icon"
@@ -66,7 +67,7 @@
         >
           <ul class="navbar-nav ms-auto mb-2 mb-lg-0 me-5">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="/#home">Home</a>
+              <a class="nav-link" aria-current="page" href="/#home">Home</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="/#about">About</a>
