finalized scrolling animation

--- a/index.html
+++ b/index.html
@@ -114,33 +114,52 @@
     </header>
 
     <section class="aboutme-section" id="about">
-      <h1 style="text-align: center">Infinite Scroll Animation</h1>
+      <h2>About Me</h2>
 
-<div class="scroller" data-speed="fast">
-  <ul class="tag-list scroller__inner">
-    <li>HTML</li>
-    <li>CSS</li>
-    <li>JavaScript</li>
-    <li>React.js</li>
-    <li>API Integration</li>
-    <li>animation</li>
-    <li>GitHub</li>
-  </ul>
-</div>
-    </div>
+      <h5>Skills and Technologies</h5>
+      <div class="scroller" data-speed="fast">
+        <ul class="tag-list scroller__inner">
+          <li>HTML</li>
+          <li>CSS</li>
+          <li>JavaScript</li>
+          <li>React.js</li>
+          <li>API Integration</li>
+          <li>GitHub</li>
+        </ul>
+      </div>
 
-    <div class="scroller" data-direction="right" data-speed="slow">
-  <ul class="tag-list scroller__inner">
-    <li>Hosting</li>
-    <li>Artificial Intelligence</li>
-    <li>Bootstrap</li>
-    <li>Flexbox</li>
-    <li>SEO</li>
-    <li>Responsive</li>
-    <li>VS Code</li>
-  </ul>
-</div>
-    </div>
+      <div class="scroller" data-direction="right" data-speed="slow">
+        <ul class="tag-list scroller__inner">
+          <li>Hosting</li>
+          <li>Artificial Intelligence</li>
+          <li>Bootstrap</li>
+          <li>Flexbox</li>
+          <li>SEO</li>
+          <li>Responsive</li>
+          <li>VS Code</li>
+        </ul>
+      </div>
+
+      <h5>Design Tools and Languages</h5>
+      <div class="scroller" data-speed="fast">
+        <ul class="tag-list scroller__inner">
+          <li>Figma</li>
+          <li>
+            French
+            <div><em>Native</em></div>
+          </li>
+          <li>Canva</li>
+          <li>
+            English
+            <div><em>C1</em></div>
+          </li>
+          <li>Procreate</li>
+          <li>
+            Spanish
+            <div><em>C1</em></div>
+          </li>
+        </ul>
+      </div>
     </section>
 
     <section class="work" id="work">
@@ -287,6 +306,6 @@
         </div>
       </div>
     </footer>
-    <script src="/script.js"></script>
+    <script src="/index.js"></script>
   </body>
 </html>
