--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
       integrity="sha384-BBtl+eGJRgqQAUMxJ7pMwbEyER4l1g+O15P+16Ep7Q9Q+zqX6gSbd85u4mG4QzX+"
       crossorigin="anonymous"
     ></script>
+    <script src="https://unpkg.com/typewriter-effect@latest/dist/core.js"></script>
 
     <title>Johanna Ortiz - Front-End Developer Portfolio</title>
     <link
@@ -89,8 +90,7 @@
     <header id="home">
       <div class="hero">
         <h1>
-          Hello,
-          <div>I am Johanna.</div>
+          <div id="hello"></div>
         </h1>
         <h2>Front End Developer and DEI Passionate</h2>
         <div class="hero-row">
