updates for responsiveness

--- a/index.html
+++ b/index.html
@@ -90,7 +90,9 @@
     <header id="home">
       <div class="hero">
         <h1>
-          <div id="hello"></div>
+          <div class="typewritter-wrap">
+            <div id="hello"></div>
+          </div>
         </h1>
         <h2>Front End Developer and DEI Passionate</h2>
         <div class="hero-row">
@@ -116,7 +118,8 @@
     <section class="aboutme-section" id="about">
       <h2>About Me</h2>
       <hr />
-      <h5>Skills and Technologies</h5>
+      <h5>Skills & Technologies</h5>
+
       <div class="scroller" data-speed="fast">
         <ul class="tag-list scroller__inner">
           <li>HTML</li>
@@ -128,7 +131,7 @@
         </ul>
       </div>
 
-      <div class="scroller" data-direction="right" data-speed="slow">
+      <div class="scroller" data-direction="right" data-speed="fast">
         <ul class="tag-list scroller__inner">
           <li>Hosting</li>
           <li>Artificial Intelligence</li>
@@ -139,8 +142,8 @@
           <li>VS Code</li>
         </ul>
       </div>
-
-      <h5>Design Tools and Languages</h5>
+      <hr />
+      <h5>Design Tools & Languages</h5>
       <div class="scroller" data-speed="fast">
         <ul class="tag-list scroller__inner">
           <li>Figma</li>
